@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-23T08:12:57Z",
-  "count_outdated" : 1405,
-  "uniques_outdated" : 761,
-  "count" : 1435,
-  "uniques" : 779,
+  "timestamp" : "2023-10-23T16:12:09Z",
+  "count_outdated" : 1406,
+  "uniques_outdated" : 762,
+  "count" : 1436,
+  "uniques" : 780,
   "clones" : [
-    {
-      "timestamp": "2023-10-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-10T00:00:00Z",
       "count": 4,
@@ -133,12 +124,12 @@
     },
     {
       "timestamp": "2023-10-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
