@@ -1,12 +1,7 @@
 {
   "count": 30,
-  "uniques": 4,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2023-10-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-10T00:00:00Z",
       "count": 4,
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2023-10-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
