@@ -1,3 +1,12 @@
+2023-10-23T16:12:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6615990369 # 2017
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
+* notice: last 14d: unq all: 5 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 761 1405 / 779 1435
+* notice: next accum: outdated-unq outdated-all / unq all: 762 1406 / 780 1436
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2023-10-09] / [2023-10-23]
+
 2023-10-23T08:12:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6610495608 # 2016
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
